tests/examples/playback/playback-test.c
@@ -1466,6 +1466,7 @@ shot_cb (GtkButton * button, PlaybackApp * app)
     /* save the pixbuf */
     gdk_pixbuf_save (pixbuf, "snapshot.png", "png", &error, NULL);
     gst_buffer_unmap (buffer, &map);
+    g_clear_error (&error);
 
   done:
     gst_sample_unref (sample);
@@ -3414,6 +3415,8 @@ main (int argc, char **argv)
 
   if (!g_option_context_parse (ctx, &argc, &argv, &err)) {
     g_print ("Error initializing: %s\n", err->message);
+    g_option_context_free (ctx);
+    g_clear_error (&err);
     exit (1);
   }
   g_option_context_free (ctx);
